5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1758_1576.log
== TEST (2019-05-28 10:39:31) 
-- CODE:
from numpy import*
v1=array(eval(input("x:"))
v2=array(eval(input("y:"))			

i=0
soma1=0
soma2=0
while(i<size(v2)) and size(v1)==size(v2)):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
	if(soma1>soma2):
		print("EUSAPIA")
	elif(soma2>soma1):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 3
    v2=array(eval(input())			
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:02) 
-- CODE:
from numpy import*
v1=array(eval(input("x:"))
v2=array(eval(input("y:"))			

i=0
soma1=0
soma2=0
while(i<size(v2)) and size(v1)==size(v2)):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
	if(soma1>soma2):
		print("EUSAPIA")
	elif(soma2>soma1):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 3
    v2=array(eval(input())			
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:40:04) 
-- CODE:
from numpy import*
v1=array(eval(input("x:"))
v2=array(eval(input("y:"))			

i=0
soma1=0
soma2=0
while(i<size(v2)) and size(v1)==size(v2)):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
	if(soma1>soma2):
		print("EUSAPIA")
	elif(soma2>soma1):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
0.174628
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 3
    v2=array(eval(input())			
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:05) 
-- CODE:
from numpy import*
v1=array(eval(input("x:"))
v2=array(eval(input("y:"))			

i=0
soma1=0
soma2=0
while(i<size(v2)) and size(v1)==size(v2)):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
	if(soma1>soma2):
		print("EUSAPIA")
	elif(soma2>soma1):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 3
    v2=array(eval(input())			
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:33) 
-- CODE:
from numpy import*
v1=array(eval(input("x: "))
v2=array(eval(input("y: "))			

i=0
soma1=0
soma2=0
while(i<size(v2)) and size(v1)==size(v2)):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
	if(soma1>soma2):
		print("EUSAPIA")
	elif(soma2>soma1):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 3
    v2=array(eval(input())			
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:13) 
-- CODE:
from numpy import*
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))			

i=0
soma1=0
soma2=0
			
while(i<size(v2)) and size(v1)==size(v2)):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
	if(soma1>soma2):
		print("EUSAPIA")
	elif(soma2>soma1):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 9
    while(i<size(v2)) and size(v1)==size(v2)):
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:19) 
-- CODE:
from numpy import*
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))			

i=0
soma1=0
soma2=0
			
while(i<size(v2)) and size(v1)==size(v2):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
	if(soma1>soma2):
		print("EUSAPIA")
	elif(soma2>soma1):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 19
    if(soma1>soma2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:24) 
-- CODE:
from numpy import*
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))			

i=0
soma1=0
soma2=0
			
while(i<size(v2)) and size(v1)==size(v2):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
	if(soma1>soma2):
		print("EUSAPIA")
	elif(soma2>soma1):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 19
    if(soma1>soma2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:52) 
-- CODE:
from numpy import*
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))			

i=0
soma1=0
soma2=0
			
while(i<size(v2)) and size(v1)==size(v2):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:42:03) 
-- CODE:
from numpy import*
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))			

i=0
soma1=0
soma2=0
			
while(i<size(v2)) and size(v1)==size(v2):
	if(v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or (v1[i]==33 and v2[i]==22):
		i=i+1
		soma1=soma1+1
	elif(v1[i]==33 and v2[i]==11) or (v1[i]==11 and v2[i]==22) or (v1[i]==22 and v2[i]==33):
		i=i+1
		soma2=soma2+1
	else:
		i=i+1
print(i)
if(soma1>soma2):
	print("EUSAPIA")
elif(soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.488676
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
